<resources>
    <string name="app_name">SMSHelper</string>
    <string name="conversations">Conversations</string>

    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="sample_text">Sample text</string>
    <string name="sms_message">SMS messages</string>
    <string name="message_details">Message details</string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="select_phone_number">Please select source phone number</string>
    <string name="receive_sms">Receive SMS</string>
    <string name="message_status">Message status</string>
    <string name="message_sent">Message sent successfully !</string>
    <string name="message_delivered">SMS delivered !</string>
    <string name="default_app">App is set to default</string>
    <string name="cancelled">Cancelled</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="title_zero">0</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="enter_destination_number">Enter destination number</string>
    <string name="not_available">Not available</string>
    <string name="send_mms">Send MMS</string>
    <string name="read_mms">Read MMS</string>
    <string name="mms_conversations">MMS conversations</string>
    <string name="mms_messages">MMS Messages</string>
    <string name="mms_details">MMS details</string>
    <string name="view_media">View media</string>
    <string name="mms_media">MMS media</string>
    <string name="reset_handler">Reset SMS handler</string>
    <string name="enter_subject">Enter subject</string>
    <string name="mms_sending_failed">MMS sending failed</string>
    <string name="add">Add</string>
    <string name="attach_file">Attach file</string>
    <string name="mobile_internet_disabled">Mobile data connection is disabled</string>
    <string name="enable_mobile_data">Please enable mobile data</string>
    <string name="not_connected_to_network">Unable to send this message. Your device is not connected to a mobile network.</string>
</resources>
